# xray-protocols-auto-deploy

./: README.md  install-vless-reality.sh  install-vless.sh  install.sh  install_advanced.sh  pyproject.toml
backend/: requirements-dev.txt  requirements.txt  utils.py
backend/protocol_templates/: trojan_xtls.json  vless_reality.json  vless_ws.json  vless_xhttp.json  vmess_ws.json
examples/: params.reality.sample.json  params.tls.sample.json
frontend/: index.html
frontend/assets/js/: api.js  app.js  utils.js
generator/: xpad.py
profiles/: trojan-tls-grpc.json  trojan-tls-kcp.json  trojan-tls-ws.json  trojan-tls-xhttp.json  vless-reality-xhttp.json  vless-vision-reality-raw.json  vmess-none-kcp.json  vmess-reality-grpc.json  vmess-reality-ws.json  vmess-reality-xhttp.json
systemd/: xray-auto-update.service  xray-auto-update.timer
templates/: base_client.json  base_server.json
tests/: run-smoke  smoke.py
utils/: autostart  bbr  clients  clients.py  geoip-update  logs  manage.sh  update-core
